fix navbar not visible

--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,6 @@ body {
   margin-left: 250px;
   margin-right: 250px;
   margin-top: 10vh;
-  position: relative;
 }
 
 .navbar {
@@ -130,13 +129,17 @@ body {
   top: 0;
   left: 0;
   z-index: 2;
-
-  background-image: linear-gradient(to bottom, #4C4B16, #898121);
-  background-blend-mode: normal;
   color: white;
   font-weight: bold;
   text-align: center;
+  filter: drop-shadow(0 10px 14px rgba(0, 0, 0, 0.5)); 
+}
 
+.navbar-brush-effect {
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to bottom, #4C4B16, #898121);
+  background-blend-mode: normal;
   -webkit-mask-image: url('/paint2.png');
   -webkit-mask-size: 300% 300%;
   -webkit-mask-position: right bottom;
@@ -615,8 +618,8 @@ body {
 
 @media (max-width: 1000px) {
   .header {
-    left: -10%;
-    width: 120%;
+    left: 0;
+    width: 100%;
   }
 
   .header h1 {
@@ -683,11 +686,27 @@ body {
     width: 100%;
   }
 
+  .header-brush-effect {
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    background: linear-gradient(to right, #4C4B16, #898121);
+    mask-image: url('/paint3.png');
+    padding: 1%;
+    margin: 0;
+    mask-size: 120% 100%;
+    mask-position: center;
+    mask-repeat: no-repeat;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
   .hamburger {
-    display: block;
-    position: fixed;
-    left: 20px;
-    top: 30px;
+    display: inline;
     font-family: 'Cinzel', serif !important;
     font-size: 2em;
   }
@@ -697,6 +716,7 @@ body {
     color: white;
     font-size: 2em;
     border: none;
+    cursor: pointer;
   }
 
   .text-inside-container {
